# cfg-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cfg.cabal
.github/workflows/: pipeline.yml
app/: Main.hs
src/: CFG.hs
src/CFG/: Languages.hs  Types.hs
src/CFG/Parsers/: Parser.hs  Python.hs
test/: TestUtils.hs
test/CFG/: OperationSpec.hs  PythonParser.hs
