cabal-version:      3.0
name:               cfg-hs
version:            0.1.0
synopsis:           A Haskell tool to create control flow graphs for progamming languages
description:        A Haskell tool to create control flow graphs for progamming languages
homepage:           https://github.com/sondr3/cfg-hs
bug-reports:        https://github.com/sondr3/cfg-hs/issues
license:            (MIT OR Apache-2.0)
license-file:       LICENSE LICENSE_APACHE
author:             Sondre Nilsen
maintainer:         nilsen.sondre@gmail.com
build-type:         Simple
category:           System
tested-with:        GHC ==8.10 || ==9.0
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/sondr3/cfg-hs.git

common config
  default-language:   Haskell2010  
  default-extensions:
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -Werror=missing-deriving-strategies
    -fwrite-ide-info -Wunused-packages

  build-depends:
    , base  >=4.12    && <4.16
    , text  ^>=1.2.3.2

common library
  build-depends:
    , megaparsec  ^>=9.1.0

  if flag(dev)
    ghc-options: -O0 -Wall -Werror

  else
    ghc-options: -O2 -Wall

flag dev
  description: Turn on development settings.
  default:     False
  manual:      True

library
  import:          config, library
  exposed-modules: CFG
  other-modules: CFG.Parsers.Python

  hs-source-dirs:  src

executable cfg-hs
  import:           config
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , cfg-hs
    , optparse-applicative  ^>=0.16.1.0

test-suite cfg-hs-test
  import:             config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  -- other-modules:      CFG.OperationSpec
  build-tool-depends: hspec-discover:hspec-discover ^>=2.8
  build-depends:
    , cfg-hs
    , hspec             ^>=2.8
    , hspec-megaparsec  ^>=2.2
    , megaparsec        ^>=9.1.0

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
